2A/05_Projet_GL/src/test/deca/context/valid/complet/83_method_call_sous_objet_complexe.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {

}

class B extends A {

}

class C extends B {

}

class D extends C {

    void get(A a , B b , C c , Object o ) {

    }
}


{
    D d ; 
    D d1 ;
    D d2 ;
    D d3 ;
    d.get(d1 , d2 , d3 , null);
}